// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root size-36 dateInput"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="Invalid date"
  />
  <div
    className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
    onClick={[Function]}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#btn-cross-18.svg"
      />
    </svg>
  </div>
</div>
`;

exports[`TimePicker should be rendered correctly 2`] = `
<div
  className="container uui-input-box uui-disabled root size-36 dateInput"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    disabled={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="01:05"
  />
  <div
    className="container uui-icon uui-disabled uui-icon-cancel -clickable hidden"
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#btn-cross-18.svg"
      />
    </svg>
  </div>
</div>
`;
